--- a/eda.ipynb
+++ b/eda.ipynb
@@ -5,11 +5,11 @@
    "id": "a695d4bb",
    "metadata": {},
    "source": [
-    "# 📊 Tarea de Regresión Lineal\n",
+    "# 📊 Car Price Prediction - Multiple linear regression with focus on interpretability\n",
     "\n",
-    "**Estudiante:** Diego Miranda  \n",
-    "**Conjunto de Datos:** *Car price prediction*\n",
-    "**Fuente del Dataset:** [Manish Kumar - Kaggle](https://www.kaggle.com/datasets/hellbuoy/car-price-prediction)\n",
+    "** By:** Diego Miranda  \n",
+    "**Dataframe:** *Car price prediction*\n",
+    "**Fuente del Dataset:** [Automobile - UC Irvine](https://archive.ics.uci.edu/dataset/10/automobile)\n",
     "---"
    ]
   },
