--- a/eda.ipynb
+++ b/eda.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "# 📊 Car Price Prediction - Multiple linear regression with focus on interpretability\n",
     "\n",
-    "** By:** Diego Miranda  \n",
-    "**Dataframe:** *Car price prediction*\n",
-    "**Fuente del Dataset:** [Automobile - UC Irvine](https://archive.ics.uci.edu/dataset/10/automobile)\n",
+    "**By:** Diego Miranda  \n",
+    "**Dataset:** *Car price prediction* //\n",
+    "**Source:** [Automobile - UC Irvine](https://archive.ics.uci.edu/dataset/10/automobile)\n",
     "---"
    ]
   },
